--- a/hangman/index.html
+++ b/hangman/index.html
@@ -9,21 +9,38 @@
 <body>
 <section id="hangman">
 
-    <div id="output"></div>
+    <div id="output">
+        <div class="step">
+            <img src="images/1.png" alt="">
+        </div>
+        <div class="step">
+            <img src="images/2.png" alt="">
+        </div>
+        <div class="step">
+            <img src="images/3.png" alt="">
+        </div>
+        <div class="step">
+            <img src="images/4.png" alt="">
+        </div>
+        <div class="step">
+            <img src="images/5.png" alt="">
+        </div>
+        <div class="step">
+            <img src="images/6.png" alt="">
+        </div>
+        <div class="step">
+            <img src="images/7.png" alt="">
+        </div>
+        <div class="step">
+            <img src="images/8.png" alt="">
+        </div>
+        
+    </div>
     <div id="word"></div>
     <div id="category"></div>
     <div id="letters"></div>
-
-    <script src="app/Game.js" type="text/javascript"></script>
-    <script>
-        const game = new Game({
-            lettersWrpper: document.getElementById('letters'),
-            cattegoryWrapper: document.getElementById('category'),
-            wordWrapper: document.getElementById('word'),
-            outputWrapper: document.getElementById('output')
-        });
-
-        game.start();
-    </script>
+</section>
+    <script src="app/Game.js"  type="module"></script>
+    
 </body>
 </html>
